--- a/legacy/index.html
+++ b/legacy/index.html
@@ -1369,6 +1369,7 @@ Nos maroquiniers francais signerons et numéroterons chaque objet. Avant de les 
 <div style="color: #888;">hectares reforestés</div>
 </div>
 </div>
+</div>
 <style>
             #chartdiv {
                 width: 100%;
