--- a/legacy/index.html
+++ b/legacy/index.html
@@ -413,7 +413,7 @@ body.custom-background { background-color: #ffffff; }
 <div class="d-flex w-100 h-100 text-center align-items-center">
 <div class="homeblock w-100 text-white">
 <h2 style="padding-bottom:20px;font-size: 40px;color:white" class="landingpagefirsttitle">La maroquinerie végétale du futur. Dès à présent.</h2>
-<div ="class"="my-md-5">
+<div class="my-md-5">
 <h3 style="padding-bottom:20px;font-size: 25px;" class="teradeli-light landingpagefirstsubtitle1 subtitledelay">Rencontre entre les traditions maroquinières francaises et nos cuirs de vin</h3>
 <div style="max-width:950px" class="row m-auto align-items-center py-2">
 <div class="col-xl-4 mt-xl-1 pb-3 pb-xl-0">
