--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <link rel="preload" href="<%= require('@/assets/fonts/Teradeli-Book.woff') %>" as="font" crossorigin>
+    <link rel="preload" href="<%= require('@/assets/fonts/Teradeli-Medium.woff') %>" as="font" crossorigin>
+    <link rel="preload" href="<%= require('@/assets/fonts/Teradeli-Light.woff') %>" as="font" crossorigin>
   </head>
   <body>
     <noscript>
